# uav_aidetetction

./: .gitignore  Analyzer.sln  Analyzer.vcxproj  Analyzer.vcxproj.filters  CMakeLists.txt  CMakeLists.txt.bak  config.json  main.cpp  readme.md
Analyzer/: Analyzer.vcxproj  Analyzer.vcxproj.filters  README.md  main.cpp
Analyzer/Core/: Algorithm.h  AlgorithmOnnxRuntime.cpp  AlgorithmOnnxRuntime.h  AlgorithmOpenVINO.cpp  AlgorithmOpenVINO.h  AlgorithmTensorRT.cpp  AlgorithmTensorRT.h  Analyzer.cpp  Analyzer.h  AvPushStream.h  Config.cpp  Config.h  Control.h  GenerateAlarmVideo.cpp  GenerateAlarmVideo.h  Scheduler.cpp  Scheduler.h  Server.cpp  Worker.cpp
Analyzer/Core/Utils/: ExceptionHandler.cpp  ExceptionHandler.h  Request.cpp  TensorRTEngine.cpp  Version.h
Core/: Alarm.cpp  Alarm.h  Algorithm.h  AlgorithmOpenVINO.cpp  AlgorithmOpenVINO.h  AlgorithmTensorRT.cpp  AlgorithmTensorRT.h  Analyzer.cpp  Analyzer.h  AvPullStream.cpp  AvPushStream.cpp  Config.cpp  Config.h  Control.h  Frame.cpp  Frame.h  GenerateAlarmVideo.cpp  Scheduler.cpp  Scheduler.h  Server.cpp  Worker.cpp
Core/Utils/: Common.h  TensorRTEngine.h  Version.h
